Fix issue with font family and language in accessibility tree

We were incorrectly not exposing the font family and language if the
change happened on a node that we happened to ignore in the
accessibility tree.

See related bug 651614 where I'm hoping to get rid of or at least simplify
the concept of "ignored" because it causes problems like this

BUG=651917

Review-Url: https://codereview.chromium.org/2382343002
Cr-Commit-Position: refs/heads/master@{#423316}

Former-commit-id: 571683bf6f39de12e3269fa493c68cc410602463